--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
   },
   "homepage": "https://github.com/openstax/tutor-js",
   "dependencies": {
+    "ajv": "^6.5.2",
     "axios": "0.15.3",
     "babel-polyfill": "6.22.0",
     "big.js": "^5.0.3",
+    "bootstrap": "^4.1.3",
     "bootstrap-sass": "3.3.7",
     "classnames": "2.2.5",
     "core-decorators": "0.19.0",
@@ -63,6 +65,7 @@
     "jest-axe": "^2.1.4",
     "jest-changed-files": "^22.4.3",
     "jest-cli": "22.4.3",
+    "jquery": "^3.3.1",
     "keymaster": "1.6.2",
     "loadjs": "3.5.0",
     "lodash": "4.17.4",
@@ -82,11 +85,12 @@
     "pattern-library": "github:openstax/pattern-library#v1.1.0",
     "phantomjs-prebuilt": "^2.1.16",
     "pluralize": "3.1.0",
+    "popper.js": "^1.14.3",
     "progress-bar-webpack-plugin": "^1.10.0",
     "promise-loader": "1.0.0",
     "qs": "6.3.0",
     "raven-js": "^3.24.1",
-    "react": "15.4.2",
+    "react": "^15.5.0",
     "react-addons-css-transition-group": "15.4.2",
     "react-addons-pure-render-mixin": "15.4.2",
     "react-addons-test-utils": "15.4.2",
@@ -98,12 +102,17 @@
     "react-datepicker": "0.41.1",
     "react-dnd": "2.2.3",
     "react-dnd-html5-backend": "2.2.3",
-    "react-dom": "15.4.2",
+    "react-dom": "^15.5.0",
+    "react-icons-kit": "^1.1.7",
     "react-joyride": "github:openstax/react-joyride#20170706",
     "react-maskedinput": "3.3.4",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "4.2.2",
+    "react-scripts": "^1.1.4",
+    "react-tag-input": "^5.1.0",
     "react-widgets": "3.4.6",
     "react-youtube": "7.4.0",
+    "reactstrap": "^6.3.0",
     "recordo": "0.0.6",
     "serializr": "^1.1.14",
     "simple-git": "^1.89.0",
